# gentle-monorepo

./: .pre-commit-config.yaml  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja  workspace.toml  workspace.toml.jinja
bases/genmono/hello_api/: __init__.py  core.py
bases/{{monorepo_name}}/hello_api/: __init__.py.jinja  core.py.jinja
components/genmono/greeting/: __init__.py
components/genmono/log/: __init__.py
components/{{monorepo_name}}/greeting/: __init__.py.jinja
components/{{monorepo_name}}/log/: __init__.py.jinja
development/: greg.py
development/notebooks/: greg.py.jinja  my_notebook.py.jinja
projects/example_fastapi/: Dockerfile  Dockerfile.jinja  README.md  pyproject.toml  pyproject.toml.jinja
test/bases/genmono/hello_api/: test_core.py.jinja
test/components/genmono/log/: test_core.py.jinja
tests/components/genmono/greeting/: test_core.py.jinja
